# adas_project

./: CMakeLists.txt  README.md  package.xml
config/: export_model.py
launch/: adas_visualization.launch  adas_world.launch  line_follower.launch
msg/: ObjectLocation.msg
photos/: ObstacleAVoidance3.mkv
rviz/: adas_config (copy).rviz  adas_config.rviz
scripts/: collison_detector.py  lane_detector.py  lane_follower_publisher.py  lanechange.py  motion_controller.py  object_detection_publisher.py  ttc_calculations.py
src/: Lane_Detector.cpp  MotionController.cpp  Simple_LaneChanger.cpp  TTCCalculator.cpp  simple_lane_changer.hpp  ttc_calculator.hpp
urdf/: custom_husky.urdf.xacro
